--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^17.0.2",
     "@capacitor/android": "5.6.0",
     "@capacitor/app": "5.0.6",
+    "@capacitor/assets": "^3.0.4",
     "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.7",
+    "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
