--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "5.6.0",
     "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.6.0",
     "@capacitor/keyboard": "5.0.7",
     "@capacitor/splash-screen": "^5.0.7",
     "@capacitor/status-bar": "5.0.6",
