--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor/android": "next",
-    "@capacitor/app": "next",
+    "@capacitor/android": "5.6.0",
+    "@capacitor/app": "5.0.6",
     "@capacitor/assets": "^3.0.4",
-    "@capacitor/browser": "next",
-    "@capacitor/core": "next",
-    "@capacitor/haptics": "next",
-    "@capacitor/ios": "next",
-    "@capacitor/keyboard": "next",
-    "@capacitor/splash-screen": "next",
-    "@capacitor/status-bar": "next",
+    "@capacitor/browser": "^5.2.0",
+    "@capacitor/core": "5.6.0",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/ios": "5.6.0",
+    "@capacitor/keyboard": "5.0.7",
+    "@capacitor/splash-screen": "^5.0.7",
+    "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@maskito/angular": "^2.0.2",
@@ -51,7 +51,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "next",
+    "@capacitor/cli": "5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -70,13 +70,5 @@
     "ts-node": "^8.3.0",
     "typescript": "~5.2.2"
   },
-  "description": "An Ionic project",
-  "browserslist": [
-    "Chrome >=79",
-    "ChromeAndroid >=79",
-    "Firefox >=70",
-    "Edge >=79",
-    "Safari >=14",
-    "iOS >=14"
-  ]
+  "description": "An Ionic project"
 }
