16kb and ver fix

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,13 @@ allprojects {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force "com.google.mlkit:barcode-scanning:17.2.0"
+        force "com.google.mlkit:vision-common:17.3.0"
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
