--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "ua.com.skywawter"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 6
-        versionName "1.0.5"
+        versionCode 7
+        versionName "1.0.6"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
@@ -48,6 +48,16 @@ repositories {
     }
 }
 
+//16kb fix
+configurations.all {
+    resolutionStrategy {
+        // Задай тут потрібні версії ML Kit
+        // Ми рекомендуємо 18.3.1 як першу спробу (підстав у разі потреби іншу версію)
+        force "com.google.mlkit:barcode-scanning:17.2.0"
+        force "com.google.mlkit:vision-common:17.3.0"
+    }
+}
+
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -60,6 +70,10 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
 	implementation 'androidx.multidex:multidex:2.0.1'
+	
+	//16kb fix
+	implementation "com.google.mlkit:barcode-scanning:17.2.0"
+	implementation "com.google.mlkit:vision-common:17.3.0"
 }
 
 apply from: 'capacitor.build.gradle'
