--- a/package.json
+++ b/package.json
@@ -21,21 +21,22 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor-mlkit/barcode-scanning": "^5.4.0",
-    "@capacitor/android": "5.6.0",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/assets": "^3.0.4",
-    "@capacitor/browser": "^5.2.0",
-    "@capacitor/core": "5.6.0",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/ios": "5.6.0",
-    "@capacitor/keyboard": "5.0.7",
-    "@capacitor/splash-screen": "^5.0.7",
-    "@capacitor/status-bar": "5.0.6",
+    "@capacitor-mlkit/barcode-scanning": "7.2.1",
+    "@capacitor/android": "7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/browser": "7.0.0",
+    "@capacitor/cli": "7.4.4",
+    "@capacitor/core": "7.4.4",
+    "@capacitor/haptics": "7.0.0",
+    "@capacitor/ios": "7.4.4",
+    "@capacitor/keyboard": "7.0.0",
+    "@capacitor/splash-screen": "7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
     "@ionic/angular": "^7.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "@maskito/angular": "^2.0.2",
     "@maskito/core": "^2.0.2",
+    "capacitor-native-settings": "^7.0.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.5",
@@ -52,7 +53,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@angular/language-service": "^17.0.2",
-    "@capacitor/cli": "5.6.0",
+    "@capacitor/assets": "^3.0.5",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
