--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -20,3 +20,7 @@ org.gradle.jvmargs=-Xmx1536m
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+
+# 16 kB Page Size Support
+# Enable 16 kB page alignment for all native libraries (AGP 8.1+)
+android.bundle.enableNativeLibraryPageAlignment=true
