--- a/android/variables.gradle
+++ b/android/variables.gradle
@@ -13,4 +13,8 @@ ext {
     androidxJunitVersion = '1.2.1'
     androidxEspressoCoreVersion = '3.6.1'
     cordovaAndroidVersion = '10.1.1'
+	androidxCameraCamera2Version = "1.5.1"
+	androidxCameraCoreVersion = "1.5.1"
+	androidxCameraLifecycleVersion = "1.5.1"
+	androidxCameraViewVersion = "1.5.1"
 }
