--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@capacitor-mlkit/barcode-scanning": "7.2.1",
+    "@capacitor-mlkit/barcode-scanning": "^7.4.0",
     "@capacitor/android": "7.4.4",
     "@capacitor/app": "^7.1.0",
     "@capacitor/browser": "7.0.0",
